rewrite -> kotlin simpel bot som alltid legger høyest scorende legg